// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > renders a green progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
    data-tint="green"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_5_"
    >
      Full progress bar
    </div>
    <div
      aria-labelledby="_r_5_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="Full progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="sm"
      data-state="complete"
      data-value="100"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="complete"
        data-value="100"
        style="transform: translateX(-0%);"
      />
    </div>
  </div>
</div>
`;

exports[`Progress > renders a large full progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
    data-tint="green"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_2_"
    >
      Full progress bar
    </div>
    <div
      aria-labelledby="_r_2_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="Full progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="lg"
      data-state="complete"
      data-value="100"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="complete"
        data-value="100"
        style="transform: translateX(-0%);"
      />
    </div>
  </div>
</div>
`;

exports[`Progress > renders a large half progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
    data-tint="green"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_3_"
    >
      Half-full progress bar
    </div>
    <div
      aria-labelledby="_r_3_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      aria-valuetext="Half-full progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="lg"
      data-state="loading"
      data-value="50"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="loading"
        data-value="50"
        style="transform: translateX(-50%);"
      />
    </div>
  </div>
</div>
`;

exports[`Progress > renders a lime progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
    data-tint="lime"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_7_"
    >
      Three-quarters full progress bar
    </div>
    <div
      aria-labelledby="_r_7_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      aria-valuetext="Three-quarters full progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="sm"
      data-state="loading"
      data-value="75"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="loading"
        data-value="75"
        style="transform: translateX(-25%);"
      />
    </div>
  </div>
</div>
`;

exports[`Progress > renders a red progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
    data-tint="red"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_6_"
    >
      Quarter-full progress bar
    </div>
    <div
      aria-labelledby="_r_6_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="25"
      aria-valuetext="Quarter-full progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="sm"
      data-state="loading"
      data-value="25"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="loading"
        data-value="25"
        style="transform: translateX(-75%);"
      />
    </div>
  </div>
</div>
`;

exports[`Progress > renders a small full progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
    data-tint="green"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_0_"
    >
      Full progress bar
    </div>
    <div
      aria-labelledby="_r_0_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="Full progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="sm"
      data-state="complete"
      data-value="100"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="complete"
        data-value="100"
        style="transform: translateX(-0%);"
      />
    </div>
  </div>
</div>
`;

exports[`Progress > renders a small half progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
    data-tint="green"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_1_"
    >
      Half-full progress bar
    </div>
    <div
      aria-labelledby="_r_1_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="50"
      aria-valuetext="Half-full progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="sm"
      data-state="loading"
      data-value="50"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="loading"
        data-value="50"
        style="transform: translateX(-50%);"
      />
    </div>
  </div>
</div>
`;

exports[`Progress > renders an empty progress bar 1`] = `
<div>
  <div
    class="_progress-bar-container_a46e85"
  >
    <div
      class="_progress-bar-label_a46e85"
      id="_r_4_"
    >
      Empty progress bar
    </div>
    <div
      aria-labelledby="_r_4_"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="Empty progress bar"
      class="_progress-bar_a46e85"
      data-max="100"
      data-size="sm"
      data-state="loading"
      data-value="0"
      role="progressbar"
    >
      <div
        class="_progress-bar-indicator_a46e85"
        data-max="100"
        data-state="loading"
        data-value="0"
        style="transform: translateX(-100%);"
      />
    </div>
  </div>
</div>
`;
